@@ -5,6 +5,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese translation; thanks to Zabbix
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+.......PS. [ZBX-8077] fixed log messages about sending/receiving of the configuration data (Sasha)
 ........S. [ZBX-8060] fixed server crash when calculating queue (asaveljevs)
 ..F....... [ZBX-7867] fixed graph item drag and drop when selecting multiple items (Ivo)
 ..F....... [ZBX-8046] fixed application toggling in Latest data page if same item belongs to several applications (Ivo)
